--- a/mockez-front/src/assets/i18n/en.json
+++ b/mockez-front/src/assets/i18n/en.json
@@ -16,7 +16,7 @@
       "generate_type": "generate type",
       "option": "option",
       "blank": "blank",
-      "name_of_field": "name of field"
+      "name_of_field": "name"
     },
     "config": {
       "rows": "rows",
