MOC-37: Schema module to app

--- a/mockez-front/src/assets/i18n/en.json
+++ b/mockez-front/src/assets/i18n/en.json
@@ -48,5 +48,13 @@
       "shared_with": "Shared with",
       "last_modified": "Last modified"
     }
-  }
+  },
+  "schema":{
+    "search": {
+      "btn_create_schema": "Create a schema"
+    },
+    "table": {
+      "schema_summary": "Schema summary"
+    }
+}
 }
