--- a/mockez-front/src/assets/i18n/en.json
+++ b/mockez-front/src/assets/i18n/en.json
@@ -40,7 +40,8 @@
       "btn_create_project": "Create a project"
     },
     "table": {
-      "project_summary": "Project summary",
+      "empty": "Project is empty, please add another project and config them by using create button.",
+      "summary": "Project summary",
       "show": "Show",
       "all_column": "All column",
       "btn_delete": "Delete selected",
@@ -51,10 +52,21 @@
   },
   "schema": {
     "search": {
+      "title": "What are you looking for?",
+      "placeholder": "Search for name",
+      "btn_search": "Search",
       "btn_create_schema": "Create a schema"
     },
     "table": {
-      "schema_summary": "Schema summary"
+      "empty": "Schema is empty, please add another project and config them by using create button.",
+      "summary": "Schema summary",
+      "show": "Show",
+      "all_column": "All column",
+      "btn_delete": "Delete selected",
+      "name": "name",
+      "shared_with": "Shared with",
+      "last_modified": "Last modified"
+
     }
   },
   "modal": {
