MOC-14: [FE] Configure generate date of table component.

--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -136,7 +136,9 @@
     },
     "choose_type": {
       "title": "CHOOSE A TYPE",
-      "find_placeholder": "Find..."
+      "find_placeholder": "Find...",
+      "not_match": "No any types match with current credential.",
+      "clear_credential": "Clear credential"
     }
   }
 }
