MOC-14: [FE] Configure generate date of table component.

--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -70,6 +70,7 @@
       "introduction": "Need some mock data to test your app? Mocker lets you generate up to 1,000 rows of realistic test data in CSV, JSON, SQL, and Excel formats.",
       "row": "#Rows:",
       "format": "Format:",
+      "table_name": "Table Name",
       "download_data": "DOWNLOAD DATA",
       "preview": "PREVIEW",
       "save_this_table": "SAVE THIS TABLE",
