--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -154,6 +154,9 @@
       "information": "INFORMATION",
       "cancel": "Cancel",
       "ok": "OK"
+    },
+    "table_config": {
+      "title": "TABLE CONFIGURATION:"
     }
   }
 }
