--- a/mocker-back/src/main/resources/i18n/message.properties
+++ b/mocker-back/src/main/resources/i18n/message.properties
@@ -1,15 +1,18 @@
-validation.apiRequest=Your request could not be completed. Please check the information and try again later
-validation.authentication=The client request has not been completed because it lacks valid authentication credentials for the requested resource.
-validation.badRequest=The request cannot be fulfilled due to bad syntax.
+exception.authentication=Authentication Error
+exception.internal=Internal Server Error
+exception.not_found=The specified resource was not found
+exception.bad_request=Bad request, invalid query syntax
+exception.unauthorized=Unauthorized, access to this resource is not allowed
+
+exception.business_application_error=Business Application Error
+validation.api_request=Your request could not be completed. Please check the information and try again later
+validation.data_not_found=The data is not found
 validation.conflict=The request could not be completed because of a conflict in the request.
-validation.dataAccessError=Error occurs when manipulating with the database
-validation.dataNotFound=The data is not found
-validation.internal=The server encountered an unexpected condition that prevented it from fulfilling the request
-validation.invalidVerificationCode = The verification code is invalid
-validation.matchPassword= Current password not match
-validation.messaging= Error occurs when sending email
-validation.methodNotAllowed=The server knows the request method, but the target resource doesn't support this method
-validation.notFound=Can not find page or expected
+validation.data_access_error=Error occurs when manipulating with the database
+validation.invalid_verification_code=The verification code is invalid
+validation.match_password=Current password not match
+validation.messaging=Error occurs when sending email
+validation.method_not_allowed=The server knows the request method, but the target resource doesn't support this method
 validation.permission=The current user is not authorized to access this resource.
-validation.serviceUnavailable=The server is not ready to handle the request
+validation.service_unavailable=The server is not ready to handle the request
 validation.unexpected=The error could not be resolved
