--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -6,11 +6,20 @@
     "cancel": "Cancel",
     "save": "Save"
   },
+  "message": {
+    "schema_save_success": "Schema saved successfully",
+    "schema_delete_confirm": "Are you sure you want to delete this schema?",
+    "schema_delete_success": "Schema with name {{name}} is deleted successfully"
+  },
   "error": {
     "authentication": {
       "title": "Authentication Error",
       "message": "The current user is not authenticated to access this page. Please sign-in and try again."
     }
+  },
+  "warning": {
+    "fields_empty_when_generating": "Can't generate data because its fields are empty.",
+    "table_is_empty": "Can't save table with empty fields."
   },
   "validator": {
     "required": "This field is required.",
@@ -110,6 +119,15 @@
       "shared_by": "Shared By",
       "group": "Group",
       "last_modified": "Last Modified"
+    },
+    "schema": {
+      "schema": "Schema",
+      "name": "Name:",
+      "description": "Description:",
+      "save": "SAVE",
+      "delete": "DELETE",
+      "project_information": "Project Information:",
+      "create_table": "CREATE TABLE"
     }
   },
   "audit": {
