MOC-46: [FE] UI for preview tables data.

--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -142,10 +142,15 @@
       "description": "Description:",
       "save": "SAVE",
       "delete": "DELETE",
-      "project_information": "Project Information:",
+      "project_information": "Project Information:"
+    },
+    "diagram": {
       "create_table": "CREATE TABLE",
       "download": "DOWNLOAD",
-      "preview": "PREVIEW"
+      "preview": "PREVIEW",
+      "generated": "Data are generated successfully, please click preview button on the top of table for viewing its data.",
+      "format": "Format",
+      "filename": "File Name"
     }
   },
   "audit": {
