--- a/mocker-front/src/assets/i18n/en.json
+++ b/mocker-front/src/assets/i18n/en.json
@@ -183,7 +183,8 @@
       "title": "CHOOSE A TYPE",
       "find_placeholder": "Find...",
       "not_match": "No any types match with current credential.",
-      "clear_credential": "Clear credential"
+      "clear_credential": "Clear credential",
+      "clear_selected_type": "Clear selected type"
     },
     "preview": {
       "title": "Preview",
