--- a/mocker-back/src/main/resources/i18n/message.properties
+++ b/mocker-back/src/main/resources/i18n/message.properties
@@ -3,8 +3,8 @@ exception.internal=Internal Server Error
 exception.not_found=The specified resource was not found
 exception.bad_request=Bad request, invalid query syntax
 exception.unauthorized=Unauthorized, access to this resource is not allowed
-
 exception.business_application_error=Business Application Error
+exception.not_found.default_message=Entity with id %s not found in the database.
 validation.api_request=Your request could not be completed. Please check the information and try again later
 validation.data_not_found=The data is not found
 validation.conflict=The request could not be completed because of a conflict in the request.
