--- a/mocker-back/src/main/resources/i18n/message.properties
+++ b/mocker-back/src/main/resources/i18n/message.properties
@@ -5,10 +5,11 @@ exception.bad_request=Bad request, invalid query syntax
 exception.unauthorized=Unauthorized, access to this resource is not allowed
 exception.business_application_error=Business Application Error
 exception.not_found.default_message=Entity with id %s not found in the database.
+
 validation.api_request=Your request could not be completed. Please check the information and try again later
-validation.data_not_found=The data is not found
 validation.conflict=The request could not be completed because of a conflict in the request.
 validation.data_access_error=Error occurs when manipulating with the database
+validation.greater_than_zero = must be greater than zero.
 validation.invalid_verification_code=The verification code is invalid
 validation.match_password=Current password not match
 validation.messaging=Error occurs when sending email
@@ -16,3 +17,6 @@ validation.method_not_allowed=The server knows the request method, but the targe
 validation.permission=The current user is not authorized to access this resource.
 validation.service_unavailable=The server is not ready to handle the request
 validation.unexpected=The error could not be resolved
+
+validation.not_duplicate= must be not duplicate
+validation.not_space= must include space in name
