--- a/mocker-back/src/main/resources/i18n/message.properties
+++ b/mocker-back/src/main/resources/i18n/message.properties
@@ -5,6 +5,7 @@ exception.bad_request=Bad request, invalid query syntax
 exception.unauthorized=Unauthorized, access to this resource is not allowed
 exception.business_application_error=Business Application Error
 exception.not_found.default_message=Entity with id %s not found in the database.
+exception.permission.default_message=The user with id %s is not allowed to do this action.
 
 validation.api_request=Your request could not be completed. Please check the information and try again later
 validation.conflict=The request could not be completed because of a conflict in the request.
